--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form>
+        <ul>
+            <li>discipline</li>
+            <li>exercise</li>
+            <li>stuff</li>
+        </ul>
+    </form>
 </body>
 </html>
